--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <div id="encode-button-container">
                         <button id="submit-encode" class="btn">Submit</button>
                         <button id="copy-encode" class="btn">Copy</button>
+                        <button class="btn clearBtn">Clear</button>
                         <p id="en-copy-confirm"></p>
                     </div>
                 </div>
@@ -28,6 +29,7 @@
                     <div id="decode-button-container">
                         <button id="submit-decode" class="btn">Submit</button>
                         <button id="copy-decode" class="btn">Copy</button>
+                        <button class="btn clearBtn">Clear</button>
                         <p id="de-copy-confirm"></p>
                     </div>
                 </div>
